fixed close cart on mobile and desktop view

--- a/client/src/Components/Navbar/MobileNavbar.scss
+++ b/client/src/Components/Navbar/MobileNavbar.scss
@@ -97,16 +97,16 @@
         }
     }
 
-    .mobile_cart-container{
-        position: absolute;
-            top: 0;
-            bottom: 0;
-            right: -100vw;
-            z-index: 20;
-            transition: all .3s ease;
-    }
-    .mobile_cart-container.active{
-        right: 0;
-            box-shadow: 1rem 1rem 1rem 100vw rgba(37, 37, 37, 0.3);
-    }
+    // .mobile_cart-container{
+    //     position: absolute;
+    //         top: 0;
+    //         bottom: 0;
+    //         right: -100vw;
+    //         z-index: 20;
+    //         transition: all .3s ease;
+    // }
+    // .mobile_cart-container.active{
+    //     right: 0;
+    //         box-shadow: 1rem 1rem 1rem 100vw rgba(37, 37, 37, 0.3);
+    // }
 }
